Fixed styling issues where projects where clipping into intro

--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@ html{
 }
 
 :root{
-    --main-bg-color: white;
-    --main-text-color: black;
+    --main-bg-color: rgb(0, 0, 0);
+    --main-text-color: rgb(255, 255, 255);
     --scrollbar-thumb-color: #1c1c1c;
 }
 
@@ -22,13 +22,27 @@ body{
     color: var(--main-text-color);
 }
 
-@media only screen and (max-width: 500px){
+/* VIEW PORT SIZE IS NOT AFFECT BY ZOOM */
+@media only screen and (max-width: 1400px) and (min-width: 601px){
+    #project-container{
+        flex-direction: column;
+    }
+}
+
+/*need to change width of project container */
+@media only screen and (max-width: 600px){
     #intro-content{
         flex-direction: column-reverse;
     }
-
+    #project-container{
+        flex-direction: column;
+    }
+    /*have to specify project-cotnainer for some reason*/ 
+    #project-container .project-item{
+        width: 30rem;
+        height: 60rem;
+    }
 }
-
 /*------------------------Classes-------------------------*/
 
 .flex-container{
@@ -36,6 +50,18 @@ body{
     align-items: center;
     justify-content: center;
 }
+
+.no-click {
+    pointer-events: none;
+ }
+
+ .no-select {
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+ }
 
 /*------------------------ScrollBar-------------------------*/
 
@@ -63,10 +89,10 @@ body{
 /* Handle */
 ::-webkit-scrollbar-thumb{
     background: var(--scrollbar-thumb-color);
-    border-radius:50px;
+    border-radius:5px;
 }
 
-/*------------------------ProfileIDs-------------------------*/
+/*------------------------Profile-------------------------*/
 #intro{
     position:relative;
 }
@@ -82,6 +108,7 @@ body{
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
     color: var(--main-text-color);
+    width: 20rem;
 }
 
 #intro-content-text h1{
@@ -89,8 +116,10 @@ body{
    white-space:nowrap;
 }
 
-#intro-content-text span{
-    font-size: 3rem; 
+#intro-content-text p{
+    font-size: 3rem;
+    text-align: center;
+
 }
 
 #profile-pic{
@@ -113,12 +142,37 @@ body{
     bottom: 1rem;
 }
 
+/*------------------------Projects-------------------------*/
+
 #projects {
-    /* doing height 100% only seems to make it the size of the view port
+    /* doing height: 100% only seems to make it the size of the view port
     even if the body exceeds the size of the view port */
-    height: 100%;
+    min-height: 100%;
+    /*setting the min-width to 100% makes the projects overflow into the left ofthe screen*/
+    /*despite having min-width of 37, it's still the lenght of the viewport?*/
+    min-width: 31rem;
     background-color: var(--main-bg-color);
 }
+
+#project-container{
+    margin: 5rem;
+    min-height:40rem;
+    min-width: 30rem;
+    max-width: 80rem;
+    gap: 2rem;
+    overflow-x: scroll;
+    justify-content: flex-start;
+}
+
+.project-item{
+    flex: 1 0 auto;
+    min-width: 0;
+    width: 40rem;
+    height: 30rem;
+    border-radius:5rem;
+    background-color:var(--main-text-color);
+}
+
 
 /*------------------------Arrow-------------------------*/
 
